Adding IP handler and IP class, working to send IP data to an API which will return information on said hosts.